Allen-Zhang/src/components/5-ExperienceComponents/MainExperiences.css
.my-experiences {
  height: 100%;
  width: 100%;
  margin: 0 auto;
  background: linear-gradient(to bottom, rgb(65, 65, 190), rgb(35, 50, 165) 60%, rgba(0, 0, 0, 0.7)),
    linear-gradient(to right, rgba(0, 0, 0, 0.7), rgb(35, 50, 165) 20%, rgb(35, 50, 165) 80%, rgba(0, 0, 0, 0.7));
  background-blend-mode: multiply;
}

.experiences-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.experience {
  display: grid;
  grid-template-columns: repeat(2, 1fr);

  margin: 2rem 3rem;
  padding: 2rem 5rem 1rem 5rem;
  border: 0.2rem solid blue;
}

.experience a:link {
  color: blue;
}

.experience a:visited {
  color: purple;
}

.experience a:hover {
  color: red;
}

.experience-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.job-title {
  font-size: 2.5rem;
  font-weight: 500;
  margin: 3rem;
  text-align: center;
}

.experience h5 {
  font-size: 1.5rem;
  font-weight: 300;
  margin: 2rem;
  text-align: center;
}

.experience h6 {
  font-size: 1.3rem;
  font-weight: 300;
  text-align: center;
}

.experience p {
  font-size: 1.2rem;
  font-weight: 200;
  margin: 1rem;
  text-align: center;
}

/** Media Queries */

@media only screen and (max-width: 480px) {
  .experience {
    grid-template-columns: 1fr;
    padding: 1rem;
    margin: 1rem auto;
    border: 0.1rem solid blue;
  }
  .job-title {
    font-size: 1.5rem;
    margin: 1.5rem;
  }
  .experience h5 {
    font-size: 1rem;
    margin: 1rem;
  }
  .experience h6 {
    font-size: 0.8rem;
  }
  .experience p {
    font-size: 0.7rem;
    margin: 0.5rem;
  }
}

@media only screen and (min-width: 481px) and (max-width: 768px) {
  .experience {
    grid-template-columns: 1fr;
    padding: 1.5rem; 
    margin: 1.5rem auto; 
  }
  .job-title {
    font-size: 1.8rem;
    margin: 2rem;
  }
  .experience h5 {
    font-size: 1.15rem;
    margin: 1.3rem;
  }
  .experience h6 {
    font-size: 1rem;
  }
  .experience p {
    font-size: 0.9rem;
    margin: 0.65rem;
  }
}

@media only screen and (min-width: 769px) and (max-width: 1024px) {
  .experience {
    grid-template-columns: 1fr;
    padding: 2rem; 
    margin: 2rem auto; 
  }
  .job-title {
    font-size: 2.1rem;
    margin: 2.5rem;
  }
  .experience h5 {
    font-size: 1.3rem;
    margin: 1.6rem;
  }
  .experience h6 {
    font-size: 1.1rem;
  }
  .experience p {
    font-size: 1rem;
    margin: 0.8rem;
  }
}

@media only screen and (min-width: 1025px) and (max-width: 1200px) {
  /* Same as default */
}

